# Wheb-Framework

./: .gitignore  .travis.yml  Main.hs  README.md  Types.hs  Wheb.cabal
Web/: Crunch.hs  Crunchy.hs  Wheb.hs
Web/Crunch/: Cookie.hs  Routes.hs  Types.hs
Web/Crunch/Plugins/: Auth.hs  Session.hs
Web/Crunch/Plugins/Debug/: MemoryBackend.hs
Web/Crunchy/: Cookie.hs  CrunchyT.hs  InitM.hs  Internal.hs  Routes.hs  Types.hs  Utils.hs
Web/Crunchy/Plugins/: Auth.hs  Session.hs
Web/Crunchy/Plugins/Debug/: MemoryBackend.hs
Web/Wheb/: Cookie.hs  InitM.hs  Internal.hs  Routes.hs  Types.hs  Utils.hs  WhebT.hs
Web/Wheb/Plugins/: Auth.hs  Session.hs
Web/Wheb/Plugins/Debug/: MemoryBackend.hs
examples/: Benchmark.hs  Blaze.hs  ConnBenchmark.hs  File.hs  Hastache.hs  Main.hs  Minimal.hs  Mongo.hs  PureWarp.hs  Redis.hs  Routes.hs  Stateful.hs  Strapped.hs  Upload.hs  WebRoutes.hs  WebSockets.hs  newSess.hs
examples/resources/: csrf.html  faq.html  form.html  index.html  settings.wb
examples/resources/templates/: index.mustache
examples/resources/templates/some_folder/: faq.ht
groundhog-rethinkdb/: Main.hs
plugins/wheb-groundhog/: wheb-redis.cabal
plugins/wheb-groundhog/src/Wheb/Plugins/: Groundhog.hs
plugins/wheb-hastache/: wheb-hastache.cabal
plugins/wheb-hastache/Web/Wheb/Plugins/: Hastache.hs
plugins/wheb-mongo/: wheb-mongo.cabal
plugins/wheb-mongo/Web/Wheb/Plugins/: Mongo.hs
plugins/wheb-mongo/src/Wheb/Plugins/: Mongo.hs
plugins/wheb-mongo/tests/: Main.hs
plugins/wheb-redis/: wheb-redis.cabal
plugins/wheb-redis/src/Web/Wheb/Plugins/: Redis.hs
plugins/wheb-redis/src/Wheb/Plugins/: Redis.hs
plugins/wheb-redis/tests/: Main.hs
plugins/wheb-rethinkdb/: wheb-rethinkdb.cabal
plugins/wheb-rethinkdb/Web/Wheb/Plugins/: RethinkDB.hs
plugins/wheb-rethinkdb/src/Wheb/Plugins/: RethinkDB.hs
plugins/wheb-rethinkdb/tests/: Main.hs
plugins/wheb-strapped/: LICENSE  wheb-strapped.cabal
plugins/wheb-strapped/Web/Wheb/Plugins/: Strapped.hs
wheb-base/: .travis.yml  LICENSE  Wheb.cabal  changelog
wheb-base/Web/: Wheb.hs
wheb-base/Web/Wheb/: InitM.hs  Routes.hs  Types.hs  Utils.hs  WhebT.hs
wheb-base/Web/Wheb/Plugins/: Session.hs
wheb-base/Web/Wheb/Plugins/Debug/: MemoryBackend.hs
wheb-base/src/: Wheb.hs
wheb-base/src/Web/: Wheb.hs
wheb-base/src/Web/Wheb/: Cookie.hs  InitM.hs  Internal.hs  Routes.hs  Types.hs  Utils.hs  WhebT.hs
wheb-base/src/Web/Wheb/Plugins/: Account.hs  Auth.hs  Cache.hs  Security.hs  Session.hs
wheb-base/src/Web/Wheb/Plugins/Debug/: MemoryBackend.hs
wheb-base/src/Wheb/: Commands.hs  Cookie.hs  InitM.hs  Internal.hs  Prelude.hs  Routes.hs  Types.hs  Utils.hs  WhebT.hs
wheb-base/src/Wheb/Plugins/: Auth.hs  Cache.hs  Security.hs  Session.hs
wheb-base/src/Wheb/Plugins/Debug/: MemoryBackend.hs
wheb-base/tests/: Main.hs  TestRoutes.hs
wheb-prelude/: LICENSE  wheb-prelude.cabal
wheb-prelude/src/: Main.hs
wheb-prelude/src/Wheb/: Prelude.hs
wheb-prelude/src/Wheb/Prelude/: Account.hs  Auth.hs  Commands.hs  Cool.hs  Persist.hs  WhebApp.hs  WhebAppGroundhog.hs
wheb-prelude/src/Wheb/Prelude/Commands/: Server.hs
wheb-prelude/src/Wheb/Prelude/Debug/MemoryBackend/: Auth.hs
whebster/: whebster.cabal
whebster/src/: Main.hs
