
name:                wheb-redis
version:             0.0.1.2
synopsis:            Redis connection for Wheb

-- A longer description of the package.
-- description:         

-- URL for the project homepage or repository.
homepage:            https://github.com/hansonkd/Wheb-Framework

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Kyle

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          me@khanson.io

-- A copyright notice.
-- copyright:           

category:            Web

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

description:
  Implements basic functionality for:
  .
  * <http://hackage.haskell.org/package/hedis Hedis>
  .
  * <http://hackage.haskell.org/package/Wheb Wheb>
  .
  Gives instances of Auth, Session and Cache backends for Wheb.
  .
  /In action:/
  .
  Use with language extensions /OverloadedStrings/
  .
  >  import Wheb
  >  import Wheb.Plugins.Redis
  >  
  >  data MyCtx = MyCtx RedisContainer
  >  
  >  instance RedisApp MyCtx where
  >    getRedisContainer (MyCtx rc) = rc
  >  
  >  main :: IO ()
  >  main = do
  >    opts <- generateOptions $ do
  >        r <- initRedis defaultConnectInfo
  >        addGET "home" rootPat ((runRedis $ get "hello") >>= (text . spack))
  >        return (MyCtx r, ())
  >   
  >    runRawHandler opts $ do
  >        runRedis $ set "hello" "world"
  >   
  >    runWhebServer opts

library
  -- Modules exported by the library.
  exposed-modules:     Wheb.Plugins.Groundhog
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    OverloadedStrings
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.7 && <4.9,
                       mtl >=2.2.1 && <2.3,
                       Wheb >=0.3 && <0.4, 
                       text >=1.1 && <1.3,
                       bytestring >=0.10 && <0.11,
                       hedis >=0.6 && <0.7
  
  -- Directories containing source files.
  hs-source-dirs: src   
  
  -- Base language which the package is written in.
  default-language:    Haskell2010

test-suite Main
  type:            exitcode-stdio-1.0
  build-depends:   base >= 4.7 && < 4.9,
                   Wheb >=0.3 && <0.4,
                   wheb-redis >= 0.0.1 && < 0.1.0,
                   bson >=0.3 && <0.4, 
                   mongoDB >=2.0 && < 2.1,
                   HUnit >= 1.2 && < 2,
                   QuickCheck >= 2.4,
                   tasty >= 0.10,
                   tasty-hunit >= 0.9.2,
                   test-framework >= 0.4.1,
                   test-framework-quickcheck2,
                   test-framework-hunit,
                   text >= 1.0 && < 1.3

  ghc-options:     -Wall -rtsopts -O0
  hs-source-dirs:  tests
  default-language: Haskell2010
  hs-source-dirs:  tests
  main-is:         Main.hs
 
source-repository head
  type:     git
  location: git@github.com:hansonkd/Wheb-Framework.git