name:                wheb-rethinkdb
version:             0.1.0.0
synopsis:            rethinkDB plugin for Wheb
homepage:            https://github.com/hansonkd/Wheb-Framework
license:             BSD3
license-file:        LICENSE
author:              Kyle Hanson
maintainer:          me@khanson.io
category:            Database
build-type:          Simple
cabal-version:       >=1.8
description:         
  Wheb plugin for RethinkDB.
  .
  * Implements SessionBackend and AuthBackend instances using RethinkDB and Wheb.
  .
  * Creates simple interface for arbitrary MongoDB actions using <http://hackage.haskell.org/package/Wheb Wheb>
  .
  * Creates simple interface for arbitrary MongoDB actions using <http://hackage.haskell.org/package/rethinkdb rethinkDB>
  .
  For a complete example, see the examples folder at <https://github.com/hansonkd/Wheb-Framework/tree/master/examples github>
  . 
  You can override the collection names for the Auth and Session documents by using 'addSetting' and setting keys for \"session-table\"
  and \"auth-table\"
  .
  > opts <- generateOptions $ do
  >    addSetting "session-table" "my-table"
  .
  Reimplimentation of official example below. Use with language extensions /OvererloadedStrings/ & /ExtendedDefaultRules/.
  .
  >  import qualified Data.Text.Lazy as T
  >  
  >  import           Wheb
  >  import           Wheb.Plugins.Mongo
  >  
  >  data MyApp = MyApp MongoContainer
  >  data MyRequestState = MyRequestState
  >  
  >  instance MongoApp MyApp where
  >      getMongoContainer (MyApp mc) = mc
  >  
  >  homePage :: WhebHandler MyApp MyRequestState
  >  homePage = do
  >      teams <- runAction $ rest =<< find (select [] "team")
  >      text $ T.intercalate " | " $ map spack teams
  >  
  >  main :: IO ()
  >  main = do
  >    opts <- generateOptions $ do
  >      addGET "." rootPat $ homePage
  >      mongo <- initMongo "127.0.0.1:27017" "master"
  >      return (MyApp mongo, MyRequestState)
  >
  >    runRawHandler opts $ do
  >      runAction $ do
  >          delete (select [] "team")
  >          insertMany "team" [
  >              ["name" =: "Yankees", "home" =: ["city" =: "New York", "state" =: "NY"], "league" =: "American"],
  >              ["name" =: "Mets", "home" =: ["city" =: "New York", "state" =: "NY"], "league" =: "National"],
  >              ["name" =: "Phillies", "home" =: ["city" =: "Philadelphia", "state" =: "PA"], "league" =: "National"],
  >              ["name" =: "Red Sox", "home" =: ["city" =: "Boston", "state" =: "MA"], "league" =: "American"] ]
  >  
  >    runWhebServer opts

library
  exposed-modules:     Wheb.Plugins.RethinkDB

  build-depends:       base >=4.7 && <4.9,
                       text >= 1.0 && < 1.3,
                       rethinkdb >=2.1 && < 2.2,
                       Wheb >=0.3 && < 0.4,
                       mtl >= 2.2.1 && < 2.3,
                       resource-pool >= 0.2 && <0.3

  -- Directories containing source files.
  hs-source-dirs: src

  -- Base language which the package is written in.
  default-language:    Haskell2010
                       
test-suite Main
  type:            exitcode-stdio-1.0
  build-depends:   base >= 4.7 && < 4.9,
                   Wheb >=0.3 && <0.4,
                   wheb-rethinkdb >= 0.1 && < 0.2,
                   rethinkdb >=2.0 && < 2.1,
                   HUnit >= 1.2 && < 2,
                   QuickCheck >= 2.4,
                   tasty >= 0.10,
                   tasty-hunit >= 0.9.2,
                   test-framework >= 0.4.1,
                   test-framework-quickcheck2,
                   test-framework-hunit,
                   text >= 1.0 && < 1.3

  ghc-options:     -Wall -rtsopts
  hs-source-dirs:  tests
  default-language: Haskell2010
  hs-source-dirs:  tests
  main-is:         Main.hs

source-repository head
  type:     git
  location: git@github.com:hansonkd/Wheb-Framework.git